fix: sticky navbar width fix on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   max-width: 1200px;
   margin: 0 auto 80px;
-  padding: 0 2em;
+  padding: 0 2em 80px;
 }
 
 .App-header {
@@ -74,17 +74,15 @@ li {
   max-width: 1200px;
   z-index: 10;
   height: 50px;
-  width:100%;
 }
 
 .nav-bar-container.sticky {
   position: fixed;
   top: 0;
-  /* left:0; */
-  /* right:0; */
-  width:100%;
-
-
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  padding: 0 2em;
 }
 
 /* projects section */
